fix: Do not use blur that does not work on mobile properly

--- a/src/app/page/group/group.component.scss
+++ b/src/app/page/group/group.component.scss
@@ -1,4 +1,5 @@
 @import "src/assets/style/attrs";
+@import "src/assets/style/palette";
 
 .header {
   display: flex;
@@ -6,7 +7,6 @@
   top: 0;
   width: 100%;
   height: $NAV_HEIGHT;
-  backdrop-filter: blur(10px);
 
   .profile {
     display: flex;
@@ -62,7 +62,8 @@
   }
 
   .tabs {
-    backdrop-filter: blur(10px);
+    background-color: $DEFAULT_BACKGROUND_COLOR;
+
     position: fixed;
     width: 100%;
   }
